# NewBF

./: .gitignore  MANIFESTO.md  PLAN.md  README.md  SPRINTS.md
NewBF/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
NewBF/.cargo/: config.toml
NewBF/crates/doc-crate/: Cargo.toml
NewBF/crates/igui/: Cargo.toml
NewBF/crates/igui/src/: child.rs  fedit.rs  lib.rs  tools_menu.rs  window.rs
NewBF/data/: README.md
NewBF/docs/: COMPTIME.md  CORETYPES.md  GC.md  IR.md  MEMORY.md  REFLECTION.md  REPORTS.md  STDLIB.md
NewBF/docs/design/: SPRINT-PLAN-2.md  SPRINT-PLAN-3.md  SPRINT-PLAN-4.md  SPRINT-PLAN.md  comptime-breadth.md  comptime-metaprogramming-v2.md  comptime-reflection.md  custom-attributes.md  delegates-events.md  fn-values.md  generic-constraints.md  generic-interfaces-pre-triage.md  generic-interfaces.md  generic-methods.md  itables.md  iterators-lazy.md  iterators.md  memory-safety.md  mixins.md  reflection.md  targeted-args.md
NewBF/docs/journals/: 2026-05-31.md  README.md
NewBF/src/newbf-comptime/: Cargo.toml
NewBF/src/newbf-comptime/src/: emit.rs  eval.rs  fold.rs  lib.rs
NewBF/src/newbf-corlib/: Cargo.toml
NewBF/src/newbf-corlib/bf/: Attribute.bf  AttributeInfo.bf  Compiler.bf  Console.bf  FieldInfo.bf  Handle.bf  Internal.bf  List.bf  Math.bf  MethodInfo.bf  Option.bf  Pool.bf  Probe.bf  Reflection.bf  Result.bf  String.bf  Type.bf
NewBF/src/newbf-corlib/src/: lib.rs
NewBF/src/newbf-driver/: Cargo.toml
NewBF/src/newbf-driver/src/: main.rs
NewBF/src/newbf-ide/: Cargo.toml
NewBF/src/newbf-ide/src/: main.rs
NewBF/src/newbf-ir/: Cargo.toml
NewBF/src/newbf-ir/src/: func.rs  inst.rs  lib.rs  module.rs  print.rs  ty.rs
NewBF/src/newbf-lexer/: Cargo.toml
NewBF/src/newbf-lexer/src/: lexer.rs  lib.rs  token.rs
NewBF/src/newbf-lexer/tests/: corpus.rs
NewBF/src/newbf-llvm/: Cargo.toml  build.rs
NewBF/src/newbf-llvm/src/: aot.rs  jit.rs  jit_mm.rs  lib.rs  lower.rs  mapsym.rs
NewBF/src/newbf-loader/: Cargo.toml
NewBF/src/newbf-loader/src/: lib.rs
NewBF/src/newbf-parser/: Cargo.toml
NewBF/src/newbf-parser/src/: ast.rs  lib.rs  parser.rs  preprocess.rs  print.rs
NewBF/src/newbf-parser/tests/: corpus.rs
NewBF/src/newbf-runtime/: Cargo.toml
NewBF/src/newbf-runtime/src/: crash_dump.rs  lib.rs
NewBF/src/newbf-runtime/src/guard/: ledger.rs  mod.rs  sites.rs  stomp.rs  tests.rs  vm.rs
NewBF/src/newbf-sema/: Cargo.toml
NewBF/src/newbf-sema/src/: api.rs  build.rs  constraints.rs  intern.rs  lib.rs  lower.rs  model.rs  ownership.rs  report.rs  resolve.rs
NewBF/src/newbf-sema/tests/: constraints.rs  corpus.rs  delete_flow.rs
NewBF/src/newbf-sema/tests/constraints/: satisfied_no_diag.bf  violate_class_constraint.bf  violate_decl_contradiction.bf  violate_iface.bf  violate_struct_constraint.bf
NewBF/src/newbf-sema/tests/ownership/: conditional_delete_ok.bf  leak_negatives.bf  provable_double_free.bf  provable_leak.bf  reassigned_delete_ok.bf  scope_delete.bf  single_delete_ok.bf
NewBF/src/newbf-test-matrix/: Cargo.toml
NewBF/src/newbf-test-matrix/src/: lib.rs
NewBF/src/newbf-winapi/: Cargo.toml  build.rs
NewBF/src/newbf-winapi/data/: README.md  winapi_data.bin.zst
NewBF/src/newbf-winapi/src/: data_schema.rs  lib.rs
NewBF/tests/newbf-compat-tests/: Cargo.toml
NewBF/tests/newbf-compat-tests/src/: lib.rs
NewBF/tests/newbf-tests/: Cargo.toml
NewBF/tests/newbf-tests/src/: lib.rs
NewBF/tests/newbf-tests/tests/: aot_parity.rs  comptime.rs  console_output.rs  guard_corpus.rs  hello_world.rs  reflection.rs  run_corpus.rs  win32_api_discovery.rs
NewBF/tests/newbf-tests/tests/golden/: reflection_report.golden
beef-tests/: README.md
beef-tests/feature-suite/src/: ForeachEnumerator.bf  GenericMethodsInstance.bf  InterfaceDelete.bf  InterfaceDispatch.bf  MixinBreakOutsideLoop.bf  ScopeInBothIfBranches.bf  ScopeInIfBranch.bf  ScopeInIfInWhileBreak.bf  ScopeWithEarlyReturn.bf  Yield.bf
beef-tests/guard-corpus/: double_free.bf  no_leak_balanced.bf  uaf_after_delete.bf
beef-tests/run-corpus/: abstract_method.bf  append_overload.bf  arith.bf  array_basic.bf  array_collection_init.bf  array_foreach.bf  array_init.bf  array_param.bf  array_struct.bf  attr_count_multi.bf  attr_int_arg.bf  attr_present_typeid.bf  attr_str_arg.bf  attr_strip_vs_marked.bf  auto_property.bf  base_call.bf  bitwise.bf  box_generic.bf  closure_arg.bf  closure_basic.bf  closure_capture_two.bf  closure_returns_fn.bf  collection_init.bf  compound.bf  compound_operator.bf  comptime_emit_dead_member.bf  comptime_emit_idempotent.bf  comptime_emit_member.bf  comptime_emit_then_call_twice.bf  comptime_emit_virtual.bf  comptime_eval_i32_arg.bf  comptime_nested_fold.bf  comptime_reflect_count_zero.bf  comptime_reflect_field_count.bf  comptime_reflect_field_name.bf  constraint_class_bound.bf  constraint_struct_bound.bf  corlib_indexer.bf  ctor_basic.bf  ctor_chain.bf  (+224 more)
beef-tests/samples/: hello.bf  stmts.bf
specs/: README.md
