[package]
name = "igui"
version = "0.1.0"
edition = "2021"
description = "Direct2D/DirectWrite MDI shell for the Factor4th IDE. Forked from WF64's igui (which it borrowed from NewCP/NCL); now owned and edited here, with no dependency on WF64's Forth runtime, JASM, or NewGC."

[lib]
name = "igui"
path = "src/lib.rs"

# Windows-only: the whole module is `#![cfg(windows)]`.  Mirrors the
# windows-rs feature set the shell needs (Direct2D/3D/DirectWrite/DXGI
# + Win32 windowing, COM, HiDPI, VEH for the crash handler).
[target.'cfg(windows)'.dependencies]
windows-numerics = "0.3"
# The doc-pane render core (markdown + Mermaid -> Direct2D), shared with
# the standalone doc-crate.exe test harness.  Pulls in selkie + pest +
# fontdue + pulldown-cmark — already shipped in the product, now linked.
docpane = { path = "../docpane" }

[target.'cfg(windows)'.dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
]
