[package]
name = "newbf-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NewBF: compiler driver, REPL, and dump-* phase-report subcommands."

[[bin]]
name = "newbf-driver"
path = "src/main.rs"

[dependencies]
clap.workspace = true
newbf-lexer.workspace = true
newbf-parser.workspace = true
newbf-sema.workspace = true
newbf-ir.workspace = true
newbf-llvm.workspace = true
newbf-runtime.workspace = true

[lints]
workspace = true
