[package]
name = "newbf-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NewBF: LLVM lowering, JIT, and AOT object/executable emission."

# LLVM is ACTIVE as of Sprint 07: IR→LLVM lowering + the dump-llvm report.
# llvm-sys (to drive the ORCv2 layer) and the NewM2 SEH manager land with the
# ORC JIT spike later in the sprint.
[dependencies]
newbf-ir.workspace = true
inkwell.workspace  = true

[lints]
workspace = true
