[package]
name = "newbf-llvm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NewBF: LLVM lowering, JIT, and AOT object/executable emission."

# LLVM is ACTIVE as of Sprint 07. inkwell builds modules; llvm-sys drives the
# ORCv2 LLJIT layer directly (inkwell's ORCv2 coverage is partial), and is used
# for the Win64-SEH unwind-registration memory manager ported from NewM2.
[dependencies]
newbf-ir.workspace = true
inkwell.workspace  = true
llvm-sys.workspace = true

[lints]
workspace = true
