[package]
name = "newbf-sema"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NewBF: semantic analysis — resolution, generics, dispatch, ownership."

[dependencies]
newbf-lexer.workspace = true
newbf-parser.workspace = true
newbf-ir.workspace = true

[dev-dependencies]
# The LLVM backend, used by the corpus verify gate (lower → emit → verify).
newbf-llvm.workspace = true

[lints]
workspace = true
