[package]
name = "newbf-winapi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NewBF: vendored Win32 ABI metadata for the FFI surface (from E:\\windows_api)."

# Mirrors NewOpenDylan's nod-winapi: a build.rs reads the shared
# `E:\windows_api\windows_api.db` (Microsoft win32metadata ingested into
# SQLite) and emits a language-agnostic postcard+zstd ABI blob; lib.rs decodes
# it lazily and answers `find_function` / `import_lib_for_dll` lookups. The DB
# path is `NEWBF_WINDOWS_API_DB`-overridable and defaults to the canonical
# read-only location — the 28 MB DB is NOT vendored into the repo.
[dependencies]
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde    = { version = "1", features = ["derive"] }
zstd     = { version = "0.13", default-features = false }

[build-dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }
serde    = { version = "1", features = ["derive"] }
zstd     = { version = "0.13", default-features = false }

[lints]
workspace = true
